--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 
     <!-- ----------- banner ---------- -->
 
+    <div class="container">
+
     <section class="banner" aria-label="popular movies">
       <div class="banner-slider">
         <div class="slider-item active" slider-item>
@@ -558,7 +560,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -589,7 +591,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -620,7 +622,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -651,7 +653,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -682,7 +684,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -713,7 +715,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -744,7 +746,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -775,7 +777,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -806,7 +808,7 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
           <div class="movie-card">
@@ -837,18 +839,14 @@
               <div class="card-badge">2023</div>
             </div>
 
-            <a href="./details.html" class="card-btn"></a>
+            <a href="./detail.html" class="card-btn"></a>
           </div>
 
         </div>
       </div>
     </section>
 
-
-
-
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere earum in voluptatum non aperiam consequatur. Sapiente reiciendis odit excepturi libero hic error, quo, molestias natus culpa repudiandae delectus iusto? Corporis necessitatibus porro quos repudiandae similique omnis unde tenetur odit dolorum error, nihil placeat rem voluptatum magnam atque ullam? Laboriosam aliquam quas, harum vitae quo rem minus et modi exercitationem ullam porro dignissimos, eaque molestias ut magnam eveniet! Debitis consequuntur, asperiores culpa fugiat veritatis voluptatem animi quisquam iusto enim hic voluptatibus maiores minus officiis adipisci odio cumque explicabo saepe amet perspiciatis harum, inventore autem itaque? Modi quos accusamus quaerat porro, facere dolor? Blanditiis ratione et repellendus similique sapiente possimus, aliquam qui, non quo tempora corrupti. Quasi error voluptatibus alias repudiandae sequi corporis facilis, nostrum quod ex dignissimos, deleniti illo voluptates tenetur, aliquam autem iusto! Sapiente dolores placeat explicabo, velit modi sint exercitationem corrupti quod nisi. Harum quasi commodi unde! Cum debitis quaerat odio incidunt deleniti nihil eius ducimus ipsum totam ipsa eos ad rerum ut provident earum dolorum vel animi vitae assumenda, numquam explicabo dolores neque? Accusantium, deserunt, quae possimus porro tempora nulla velit distinctio perferendis architecto quasi ut debitis blanditiis voluptatibus tenetur consequatur suscipit minima maxime eaque amet, obcaecati consequuntur sint! Libero, saepe molestiae incidunt nihil autem excepturi minus tempora eos laboriosam sequi culpa adipisci quisquam, velit, voluptatem fugiat dolore quo repellat error iusto reiciendis quas. Veniam quasi molestiae eaque perspiciatis? Ipsum, eaque culpa numquam consequuntur enim officiis deserunt ratione sed magnam, fugiat, doloremque blanditiis. Facilis voluptatem neque architecto blanditiis et eveniet ipsum, obcaecati maxime voluptas praesentium ducimus accusamus id provident possimus a iure assumenda, voluptatibus modi. Consequatur illo in minima expedita. At veniam autem laudantium vitae explicabo similique asperiores voluptates sequi quam ratione praesentium quibusdam optio aliquid, sed accusantium dolorum. Debitis accusantium nulla a fugit, sapiente maxime? Voluptate at pariatur, vel sequi consequuntur quos suscipit iure officia, culpa sed impedit nobis. Nisi porro quia fugiat dolores, nam quisquam repellat architecto ad consequatur placeat quam magni illo labore sit, perferendis in, debitis necessitatibus maxime sequi recusandae. Enim nostrum aspernatur illo amet laborum ad tempore quo aut voluptatem distinctio, necessitatibus natus. Quibusdam inventore ducimus commodi sunt? Voluptatum obcaecati nam voluptas magni dolorum ipsum necessitatibus at? Earum autem omnis doloribus consequatur quas illo. Voluptate, quaerat iusto. Corrupti qui pariatur commodi iure minus! Commodi, ad quidem est, quaerat ratione officia aut eveniet et magnam enim culpa. Exercitationem numquam sequi quae enim voluptas nobis ipsa veniam sapiente unde expedita. Ut enim magnam itaque reiciendis quod! Consequuntur, sed voluptatem voluptas impedit debitis exercitationem labore quibusdam natus harum dignissimos dolor at, distinctio sunt omnis dolorem ducimus earum nostrum vitae. Modi ratione natus, obcaecati, voluptatem eaque minima dolor cumque nulla quis, ab quibusdam aperiam mollitia facere. Qui, ad culpa deserunt quaerat ipsam sapiente suscipit velit? Consequuntur id repellat magni ab? Voluptate odit perspiciatis itaque libero, maiores ipsa? Exercitationem saepe laudantium rerum sed asperiores facere omnis eius fugit, consequatur ea excepturi vitae repudiandae, accusamus neque explicabo, laborum corrupti quisquam quia sunt cumque consequuntur. Nulla repellendus quod nostrum incidunt cupiditate quos id mollitia ullam quibusdam reiciendis earum totam tempore minus distinctio, eum a vitae vero vel velit illum fuga veritatis odit at. Ratione animi porro voluptatibus minus vitae architecto doloremque corrupti maxime dolorem perspiciatis vero deleniti autem non necessitatibus quasi quo quibusdam quidem molestias repudiandae, fugiat accusantium. Nobis reiciendis eaque aliquam, praesentium odit id voluptates error dolore cupiditate incidunt adipisci. Dolor, nisi! Consequatur, in accusamus assumenda fuga, totam exercitationem ex culpa quibusdam consectetur eaque minus voluptate facilis ducimus odit suscipit delectus. Rem iure quis non quod culpa eveniet iusto, exercitationem aliquid dicta nihil dolorum excepturi necessitatibus aperiam dolores quibusdam cum recusandae, mollitia facere nemo amet itaque libero autem asperiores. Expedita blanditiis placeat, eveniet ab vel ad deleniti doloremque, esse accusamus harum laborum eum ea architecto voluptatibus quod hic beatae aliquid temporibus reiciendis dolor quae quam, fugit in iure? Itaque vero libero sequi suscipit dignissimos, soluta quas facilis est iste ipsa unde, sed veritatis cum, dolorem ut nostrum fuga doloremque magnam vitae perspiciatis nemo aut? Ullam, ea qui! Repellat at reiciendis odio id illo nihil vel, aliquid ipsum maiores, cupiditate quis architecto sequi modi aliquam cum velit consequatur molestiae nesciunt laborum a! Sequi architecto nobis reiciendis laboriosam doloremque adipisci placeat nisi consequatur eum nemo voluptatum saepe cupiditate, magnam numquam ullam earum voluptates, iusto laborum esse recusandae maiores, delectus libero ut voluptatem? Quidem eveniet consectetur molestiae temporibus maxime illo porro asperiores provident ratione perferendis ex delectus sequi accusantium, et iusto culpa id. Blanditiis dignissimos minima, ipsa velit eos accusamus molestiae quibusdam aut aperiam sunt modi eligendi tempora esse corrupti sequi, maxime reprehenderit, eaque debitis omnis quo corporis. Modi ipsum veniam, unde enim sint aut, laboriosam deleniti reiciendis numquam eius, corrupti voluptate architecto nesciunt dolore illo optio soluta aspernatur rerum voluptatem sed quia totam tempora accusantium. A atque veniam labore repudiandae consequatur id impedit cumque debitis, neque, officia quaerat nobis aperiam nam iusto eaque, ipsam facilis! Sequi possimus praesentium sapiente quaerat deleniti officia ea veritatis voluptates ipsa, expedita culpa veniam assumenda quas, numquam at asperiores? Impedit omnis aliquid quod ullam rerum ratione maxime ab quas, dicta neque recusandae ipsum natus, veritatis, eius odio. Quis nulla necessitatibus autem animi, fugiat soluta ut possimus ab vero deserunt molestias veniam dolore suscipit, eaque adipisci optio officiis eum eligendi corrupti! Placeat, voluptatibus hic! Obcaecati, fuga repudiandae. Voluptatum distinctio ut, aspernatur nemo odio harum accusantium, a numquam asperiores id delectus ipsum totam perferendis, quaerat quidem maxime ratione nulla repellendus minus nisi accusamus quis commodi voluptas assumenda. Quia dolorem, ipsam esse rerum voluptas eius praesentium minus consequatur iusto corrupti, illum similique aut dolor deleniti amet hic accusantium, distinctio sequi veritatis veniam earum soluta saepe labore? Ab obcaecati, ipsam nobis voluptas exercitationem quo soluta eaque nam voluptates tempore dolorum cum consequatur eum sunt omnis dolor molestias mollitia illum ipsum distinctio, aliquid quam doloremque voluptatem perferendis. Consequatur voluptate praesentium eum, consequuntur quae, incidunt est ullam quibusdam dolorum quisquam, non temporibus? Id, odit. Ut in at illum, qui officia eveniet vero provident temporibus voluptatum hic necessitatibus dolorem ipsam iure veniam sint.</p>
+  </div>
 
 
   </body>
