--- a/detail.html
+++ b/detail.html
@@ -98,6 +98,9 @@
       </button>
     </header>
 
+    <main>
+
+
     <!-- SIDEBAR -->
     <nav class="sidebar" sidebar>
       <div class="sidebar-inner">
@@ -163,77 +166,11 @@
 
     <!-- ----------- banner ---------- -->
 
-    <div class="container">
+    <div class="container" page-content>
+
       <!-- --------------------- movie list -------------------------- -->
 
-      <div class="movie-detail">
-        <div class="backdrop-image" style="background-image: url(./assets/images/slider-banner.jpg);"></div>
-
-        <figure class="poster-box movie-poster">
-            <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish" class="img-cover">
-        </figure>
-
-        <div class="detail-box">
-
-            <div class="detail-content">
-                <h1 class="heading">Puss in Boots: The Last Wish</h1>
-
-                <div class="meta-list">
-                    <div class="meta-item">
-                        <img src="./assets/images/star.png" alt="rating" width="20" height="20">
-
-                        <span class="span">8.4</span>
-                    </div>
-
-                    <div class="separator"></div>
-
-                    <div class="meta-item">162m</div>
-
-                    <div class="separator"></div>
-
-                    <div class="meta-item">2022</div>
-
-                    <div class="meta-item card-badge">PG-13</div>
-
-                </div>
-
-                <p class="genre">Animation, Action, Adventure</p>
-
-                <p class="overview">Puss in Boots discovers that his passion for adventure has taken its toll: He has burned through eight of his nine lives, leaving him with only one life left. Puss sets out on an epic journey to find the mythical Last Wish and restore his nine lives.</p>
-
-                <ul class="detail-list">
-
-                    <div class="list-item">
-                        <p class="list-name">Directed By</p>
-
-                        <p>Ryan Coogler</p>
-
-                    </div>
-                </ul>
-
-
-            </div>
-
-            <div class="title-wrapper">
-                <h3 class="title-large">Trailers and Clips</h3>
-            </div>
-
-            <div class="slider-list">
-                <div class="slider-inner">
-
-                    <div class="video-card"></div>
-
-                    <div class="video-card"></div>
-
-                    <div class="video-card"></div>
-                    
-                    <div class="video-card"></div>
-                </div>
-            </div>
-        </div>
-      </div>
-
-      <section class="movie-list">
+      <!-- <section class="movie-list">
         <div class="title-wrapper">
           <h3 class="title-large">You May Also Like</h3>
         </div>
@@ -615,8 +552,11 @@
 
           </div>
         </div>
-      </section>
+      </section> -->
     </div>
+
+  </main>
+
 
 
   </body>
