--- a/movie-list.html
+++ b/movie-list.html
@@ -25,7 +25,9 @@
 
     <!-- custom js link -->
     <script src="./assets/js/global.js" defer></script>
-    <script src="./assets/js/detail.js" type="module"></script>
+    <script src="./assets/js/movie-list.js" type="module"></script>
+    <!-- <script src="./assets/js/index.js" type="module"></script> -->
+    <!-- <script src="./assets/js/detail.js" type="module"></script> -->
   </head>
   <body>
     <!-- header  -->
@@ -98,517 +100,29 @@
       </button>
     </header>
 
+
+    <main>
+
+
     <!-- SIDEBAR -->
-    <nav class="sidebar" sidebar>
-      <div class="sidebar-inner">
-        <div class="sidebar-list">
-          <p class="title">Genre</p>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">Action</a>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">Horror</a>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">Comedy</a>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link"
-            >Adventure</a
-          >
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">Drama</a>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">Sci-Fi</a>
-        </div>
-
-        <div class="sidebar-list">
-          <p class="title">Language</p>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link"
-            >English</a
-          >
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">Hindi</a>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link"
-            >Bengali</a
-          >
-
-          <a href="./movie-list.html" menu-close class="sidebar-link"
-            >Mandarian</a
-          >
-
-          <a href="./movie-list.html" menu-close class="sidebar-link">French</a>
-
-          <a href="./movie-list.html" menu-close class="sidebar-link"
-            >Spanish</a
-          >
-        </div>
-
-        <div class="sidebar-footer">
-          <p class="copyright">
-            Copyright@2024
-            <a href="https://www.themoviedb.org/" target="_blank">TMDB</a>
-          </p>
-
-          <img
-            src="./assets/images/tmdb-logo.svg"
-            alt="the movie database logo"
-            width="130"
-            height="17"
-          />
-        </div>
-      </div>
-    </nav>
+    <nav class="sidebar" sidebar></nav>
 
     <div class="overlay" overlay menu-toggler></div>
 
     <!-- ----------- banner ---------- -->
 
-    <div class="container">
+    <div class="container" page-content>
       <!-- --------------------- movie list -------------------------- -->
 
-      <section class="movie-list genre-list">
-        <div class="title-wrapper">
-          <h3 class="heading">All Fantasy Movies</h3>
-        </div>
-
-        <div class="grid-list">
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-
-          <div class="movie-card">
-            <figure class="poster-box card-banner">
-              <img
-                src="./assets/images/slider-control.jpg"
-                alt=""
-                class="img-cover"
-                draggable="false"
-              />
-            </figure>
-
-            <h4 class="title">The Black Demon</h4>
-
-            <div class="meta-list">
-              <div class="meta-item">
-                <img
-                  src="./assets/images/star.png"
-                  alt="rating"
-                  width="20"
-                  height="20"
-                  loading="lazy"
-                />
-
-                <span class="span">8.5</span>
-              </div>
-
-              <div class="card-badge">2023</div>
-            </div>
-
-            <a href="./detail.html" class="card-btn"></a>
-          </div>
-        </div>
-
-        <button class="btn load-more">Load More</button>
-      </section>
+      <section class="movie-list genre-list"></section>
+      
     </div>
+
+
+  </main>
+
+
+
+
   </body>
 </html>
